--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
-        "@vitejs/plugin-vue": "^3.0.1",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
     },
     "dependencies": {
-        "vue": "^3.2.26"
+        "vue": "^3.2.26",
+        "vue-router": "^4.2.5"
     }
 }
